# ejemplos-fastapi

./: README.md
login/: README.md  pyproject.toml
login/app/: __init__.py  main.py
login/app/core/: config.py
login/app/models/: user.py
login/app/repositories/: memory_store.py  user_store.py
login/app/routers/: auth.py  home.py
login/app/security/: login_manager.py
login/app/services/: auth_service.py
login/app/static/: styles.css
login/app/templates/: base.html  home.html  login.html  register.html
websocket/: README.md  pyproject.toml
websocket/app/: main.py
websocket/app/routers/: chat.py
websocket/app/static/: styles.css
websocket/app/templates/: base.html  chat.html
