[tool.poetry]
name = "fastapi-login-demo"
version = "0.1.0"
description = "Demo web de registro/login en FastAPI con fake_db y fastapi-login"
authors = ["Neptali <neptali@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = { version = ">=0.115.0", extras = ["standard"] }
fastapi-login = ">=1.10.0"
jinja2 = ">=3.1.0"
python-multipart = ">=0.0.9"
passlib = { version = ">=1.7.4", extras = ["bcrypt"] }
bcrypt = "4.0.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
