[tool.poetry]
name = "fastapi-websocket-demo"
version = "0.1.0"
description = "Demo sencillo de WebSocket en FastAPI con Jinja2"
authors = ["Neptali <neptali@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = { version = ">=0.115.0", extras = ["standard"] }
jinja2 = ">=3.1.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
